# Full_setup_tests_todomvc

./: LICENSE  project.py  pyproject.toml
Full_setup_tests_todomvc/helpers/allure/: aaa.py  gherkin.py  report.py
Full_setup_tests_todomvc/helpers/pytest/: settings.py  skip.py
Full_setup_tests_todomvc/model/: __init__.py  todomvc.py
scripts/etc/selenoid/: compose.yaml
tests/: conftest.py  test_todo_operations_on_filter_all.py
